--- a/templates/home/_button_registerOrConnected.html.twig
+++ b/templates/home/_button_registerOrConnected.html.twig
@@ -8,9 +8,10 @@
                 </div>
             </div>
         </div>
-        <div class="mt-5 sm:mt-6 sm:grid {{ app.user ? 'sm:grid-cols-1' : 'sm:grid-cols-2' }}  sm:gap-3 sm:grid-flow-row-dense">
+        <div class="mt-5 sm:mt-6 grid {{ app.user ? 'grid-cols-1' : 'grid-cols-2' }}  gap-3 grid-flow-row-dense">
             {% if app.user %}
-                <a href="{{ path('app_logout') }}" class="btn-red">Déconnexion</a>
+                <a href="{{ path('app_interactions') }}" class="btn-blue">InteractionLab</a>
+                <a href="{{ path('app_logout') }}" class="btn-deconnected-home-page">Déconnexion</a>
             {% else %}
                 <a href="{{ path('app_register') }}" class="btn-green">Inscription</a>
                 <a href="{{ path('app_login') }}" class="btn-blue">Connexion</a>
