--- a/templates/home/_card_feedbacks_list.html.twig
+++ b/templates/home/_card_feedbacks_list.html.twig
@@ -1,6 +1,6 @@
 <div id="card-feed-list-{{ state }}" class="hidden">
     {% if allFeeds is defined and allFeeds is not null %}
-        <p class="text-gray-400 dark:text-gray-200">A ce jours vous avez {{ color == 'violet' ? 'envoyer' : 'reçu' }} {{ allFeeds|length ~ ' Feedback' }}</p>
+        <p class="text-gray-400 dark:text-gray-200">A ce jour vous avez {{ color == 'violet' ? 'envoyer' : 'reçu' }} {{ allFeeds|length ~ ' Feedback' }}</p>
 
         <div class="overflow-y-auto max-h-36 lg:max-h-56 md:max-h-56 shadow-inner rounded-lg p-4 not-prose">
             <ul role="list" class="mt-3 grid grid-cols-2 gap-3 sm:gap-4 lg:grid-cols-3 ">
@@ -10,7 +10,7 @@
                             <div class="flex-1 px-4 py-2 text-sm truncate prose">
                                 <p class="text-gray-900 font-medium dark:text-gray-300">{{ color == 'violet' ? feedSend.username : feedSend.sender }}</p>
                                 <div class="h-3 relative max-w-sm rounded-full overflow-hidden motion-safe:animate-pulse">
-                                    <div class="underProgresBar-{{ state }} w-full h-full bg-opacity-50 absolute"></div>
+                                    <div class="underProgressBar-{{ state }} w-full h-full bg-opacity-50 absolute"></div>
                                     <div class="upperProgressBar-{{ state }} inline-flex px-2 justify-start font-semibold items-center h-full absolute text-xs" style="width: {{ feedSend.grade }}%;">{{ feedSend.grade }}%</div>
                                 </div>
                                 <p class="text-sm text-gray-500/50 dark:text-white/25">{{ feedSend.gapFeed }}</p>
