--- a/templates/home/_modal_feedback.html.twig
+++ b/templates/home/_modal_feedback.html.twig
@@ -13,6 +13,7 @@
                     </div>
                 </div>
             </div>
+
             {{ form_start(feedForm) }}
                 <div class="mt-2 sm:mt-4 sm:ml-3">
                     <input type="text" name="id" value="" id="uid" hidden/>
@@ -20,9 +21,42 @@
                     {% if countfeedToday >= 5 %}
                         <p class="text-gray-500 font-semibold dark:text-gray-100">Desoler {{ app.user.fullName }} vous avez atteint votre quota de feedback pour aujourd'hui qui est de 5/jours</p>
                     {% else %}
+                        <div class='flex flex-row items-center'>
+                            <div id='rangeInputId_1' class='range text-yellow-300/10'>
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
+                                     fill="currentColor" class="w-16 h-16 rate_start">
+                                  <path fill-rule="evenodd" d="M10.788 3.21c.448-1.077 1.976-1.077 2.424 0l2.082 5.007 5.404.433c1.164.093 1.636 1.545.749 2.305l-4.117 3.527 1.257 5.273c.271 1.136-.964 2.033-1.96 1.425L12 18.354 7.373 21.18c-.996.608-2.231-.29-1.96-1.425l1.257-5.273-4.117-3.527c-.887-.76-.415-2.212.749-2.305l5.404-.433 2.082-5.006z" clip-rule="evenodd" />
+                                </svg>
+                            </div>
+                             <div id='rangeInputId_2' class='range text-yellow-300/10'>
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
+                                     fill="currentColor" class="w-16 h-16 rate_start">
+                                  <path fill-rule="evenodd" d="M10.788 3.21c.448-1.077 1.976-1.077 2.424 0l2.082 5.007 5.404.433c1.164.093 1.636 1.545.749 2.305l-4.117 3.527 1.257 5.273c.271 1.136-.964 2.033-1.96 1.425L12 18.354 7.373 21.18c-.996.608-2.231-.29-1.96-1.425l1.257-5.273-4.117-3.527c-.887-.76-.415-2.212.749-2.305l5.404-.433 2.082-5.006z" clip-rule="evenodd" />
+                                </svg>
+                            </div>
+                             <div id='rangeInputId_3' class='range text-yellow-300/10'>
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
+                                     fill="currentColor" class="w-16 h-16 rate_start">
+                                  <path fill-rule="evenodd" d="M10.788 3.21c.448-1.077 1.976-1.077 2.424 0l2.082 5.007 5.404.433c1.164.093 1.636 1.545.749 2.305l-4.117 3.527 1.257 5.273c.271 1.136-.964 2.033-1.96 1.425L12 18.354 7.373 21.18c-.996.608-2.231-.29-1.96-1.425l1.257-5.273-4.117-3.527c-.887-.76-.415-2.212.749-2.305l5.404-.433 2.082-5.006z" clip-rule="evenodd" />
+                                </svg>
+                            </div>
+                             <div id='rangeInputId_4' class='range text-yellow-300/10'>
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
+                                     fill="currentColor" class="w-16 h-16 rate_start">
+                                  <path fill-rule="evenodd" d="M10.788 3.21c.448-1.077 1.976-1.077 2.424 0l2.082 5.007 5.404.433c1.164.093 1.636 1.545.749 2.305l-4.117 3.527 1.257 5.273c.271 1.136-.964 2.033-1.96 1.425L12 18.354 7.373 21.18c-.996.608-2.231-.29-1.96-1.425l1.257-5.273-4.117-3.527c-.887-.76-.415-2.212.749-2.305l5.404-.433 2.082-5.006z" clip-rule="evenodd" />
+                                </svg>
+                            </div>
+                             <div id='rangeInputId_5' class='range text-yellow-300/10'>
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
+                                     fill="currentColor" class="w-16 h-16 rate_start">
+                                  <path fill-rule="evenodd" d="M10.788 3.21c.448-1.077 1.976-1.077 2.424 0l2.082 5.007 5.404.433c1.164.093 1.636 1.545.749 2.305l-4.117 3.527 1.257 5.273c.271 1.136-.964 2.033-1.96 1.425L12 18.354 7.373 21.18c-.996.608-2.231-.29-1.96-1.425l1.257-5.273-4.117-3.527c-.887-.76-.415-2.212.749-2.305l5.404-.433 2.082-5.006z" clip-rule="evenodd" />
+                                </svg>
+                            </div>
+
+                        </div>
                         {{ form_widget(feedForm.grade, {
                             'attr': {
-                                'class': 'w-full mt-1 bg-red-400 border-red-400',
+                                'class': 'w-full mt-1',
                                 'title' : 'grade'
                             }})
                         }}
@@ -42,8 +76,8 @@
                     {% endif %}
                     <button type="button" class="cancel btn-red">Fermer</button>
                 </div>
-
             {{ form_end(feedForm, { render_rest: (countfeedToday < 5) ? true : false }) }}
+
         </div>
 
     </div>
