--- a/templates/home/_card_feedbacks_list.html.twig
+++ b/templates/home/_card_feedbacks_list.html.twig
@@ -9,9 +9,15 @@
                         <div class="flex-1 flex items-center justify-between rounded-lg truncate">
                             <div class="flex-1 px-4 py-2 text-sm truncate prose">
                                 <p class="text-gray-900 font-medium dark:text-gray-300">{{ color == 'violet' ? feedSend.username : feedSend.sender }}</p>
-                                <div class="h-3 relative max-w-sm rounded-full overflow-hidden motion-safe:animate-pulse">
-                                    <div class="underProgressBar-{{ state }} w-full h-full bg-opacity-50 absolute"></div>
-                                    <div class="upperProgressBar-{{ state }} inline-flex px-2 justify-start font-semibold items-center h-full absolute text-xs" style="width: {{ feedSend.grade }}%;">{{ feedSend.grade }}%</div>
+
+                                <div class='cardStart flex flex-row items-center' data-grades-card="{{ feedSend.grade }}">
+                                {% for i in 1..5 %}
+                                  <div id='{{ 'starCardId_'~  i}}' class='starCard text-yellow-300/10'>
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-5 h-5 rate_start">
+                                      <path fill-rule="evenodd" d="M10.788 3.21c.448-1.077 1.976-1.077 2.424 0l2.082 5.007 5.404.433c1.164.093 1.636 1.545.749 2.305l-4.117 3.527 1.257 5.273c.271 1.136-.964 2.033-1.96 1.425L12 18.354 7.373 21.18c-.996.608-2.231-.29-1.96-1.425l1.257-5.273-4.117-3.527c-.887-.76-.415-2.212.749-2.305l5.404-.433 2.082-5.006z" clip-rule="evenodd" />
+                                    </svg>
+                                </div>
+                                {% endfor %}
                                 </div>
                                 <p class="text-sm text-gray-500/50 dark:text-white/25">{{ feedSend.gapFeed }}</p>
                             </div>
