--- a/templates/home/interactionPage.html.twig
+++ b/templates/home/interactionPage.html.twig
@@ -22,24 +22,21 @@
                                 <div class="space-y-4 prose">
 
                                     <!-- Bar de progression des scores des feedbacks reçu par l'utilisateur courant --->
-                                    {% if middleScoreGradeInPercent == 0 and middleScoreGradeInPercent is defined %}
+                                    {% if middleScoreGrade == 0 and middleScoreGrade is defined %}
                                         <p class="text-gray-600 dark:text-gray-400 py-3">Personne n'a encore écrit de feedback à votre sujet.</p>
                                     {% else %}
                                         <p class="text-gray-600 dark:text-gray-400 pt-3">Retrouver la moyenne de votre score des feedbacks attribué par l'ensemble des participants</p>
 
-                                        <div id="rate_grade_star" class='flex flex-row items-center' data-grades="{{ middleScoreGradeInPercent }}">
+                                        <div id="rate_grade_star" class='flex flex-row items-center' data-grades="{{ middleScoreGrade }}">
                                         {% for i in 1..5 %}
-                                        <div id='{{ 'starInputId_'~  i}}' class='note text-yellow-300/10'>
+                                        <div id='{{ 'starInputId_'~ i }}' class='note
+                                        text-yellow-300/10'>
                                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
                                                  fill="currentColor" class="w-16 h-16 rate_start">
                                               <path fill-rule="evenodd" d="M10.788 3.21c.448-1.077 1.976-1.077 2.424 0l2.082 5.007 5.404.433c1.164.093 1.636 1.545.749 2.305l-4.117 3.527 1.257 5.273c.271 1.136-.964 2.033-1.96 1.425L12 18.354 7.373 21.18c-.996.608-2.231-.29-1.96-1.425l1.257-5.273-4.117-3.527c-.887-.76-.415-2.212.749-2.305l5.404-.433 2.082-5.006z" clip-rule="evenodd" />
                                             </svg>
                                         </div>
                                         {% endfor %}
-                                        </div>
-                                        <div class="h-8 relative max-w-full rounded-full overflow-hidden pb-6">
-                                            <div class="w-full h-full bg-sky-400 bg-opacity-50 absolute"></div>
-                                            <div class="inline-flex px-2 bg-sky-600 text-sky-800 justify-start font-semibold items-center h-full absolute text-xs lg:text-md" style="width: {{ middleScoreGradeInPercent }}%;">{{ middleScoreGradeInPercent }}%</div>
                                         </div>
                                     {% endif %}
 
