--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -61,6 +61,28 @@
             focus:ring-offset-2
             focus:ring-red-500
     }
+    .btn-profile {
+        @apply
+            relative
+            inline-flex
+            items-center
+            justify-center
+            px-4
+            py-2
+            border
+            border-transparent
+            shadow-sm
+            text-sm
+            font-medium
+            rounded-md
+            text-white
+            bg-indigo-600
+            hover:bg-indigo-500
+            focus:outline-none
+            focus:ring-2
+            focus:ring-offset-2
+            focus:ring-indigo-500
+    }
 
     .btn-deconnected-home-page {
         @apply
@@ -197,5 +219,23 @@
             dark:bg-violet-500
             dark:focus:ring-violet-600
             dark:hover:bg-violet-600
+    }
+    .start_inter {
+        @apply
+            w-8
+            h-8
+            md:w-14
+            md:h-14
+            lg:w-16
+            lg:h-16
+    }
+    .star_profil {
+        @apply
+            w-4
+            h-4
+            md:w-10
+            md:h-10
+            lg:w-14
+            lg:h-14
     }
 }
