--- a/templates/profile/index.html.twig
+++ b/templates/profile/index.html.twig
@@ -3,5 +3,26 @@
 {% block title %}Profile | {{ app.user.fullName }}{% endblock %}
 
 {% block body %}
-
+	<div class="max-w-7xl mx-auto px-4 py-10 sm:px-6 lg:px-8 dark:bg-slate-700">
+		<div class="overflow-y-auto max-h-96 md:max-h-screen shadow-inner rounded-lg p-4 not-prose">
+        <ul role="list" class="mt-3 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-3 sm:gap-4 ">
+            {% for recived in receives %}
+              <li class="w-full bg-slate-100 col-span-1 flex border-transparent shadow-lg rounded-md dark:bg-slate-600">
+                    <div class="flex-1 flex items-center justify-between rounded-lg truncate">
+                        <div class="flex-1 px-4 py-2 text-sm truncate prose">
+                            <p class="text-gray-900 font-medium dark:text-gray-300">{{ recived.issue.firstname ~ ' ' ~ recived.issue.lastname }}</p>
+                            <p class="text-gray-900 font-medium dark:text-gray-300">{{ recived.comment }}</p>
+	                        {% include 'includes/_start_rate.html.twig' with { idGrade:'rate_profil_star', scoreGrade:recived.grade, class:'profil_page', size_start:'star_profil' } %}
+                          <p class="text-sm text-gray-500/50 dark:text-white/25">envoyer le {{ recived.createdAt|date("d/m/Y", "Europe/Paris") }}</p>
+                        </div>
+                    </div>
+                </li>
+            {% endfor %}
+        </ul>
+    </div>
+</div>
+{% endblock %}
+{% block javascripts %}
+	{{ parent() }}
+	{{ encore_entry_script_tags('prof') }}
 {% endblock %}
