--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -233,9 +233,24 @@
         @apply
             w-4
             h-4
-            md:w-10
-            md:h-10
-            lg:w-14
-            lg:h-14
+            md:w-6
+            md:h-6
+            lg:w-8
+            lg:h-8
+    }
+
+    .btn-list-sidebar-profile {
+        @apply
+            ml-8
+            py-2
+            px-2
+            font-extrabold
+            text-sm
+            text-gray-800
+            dark:text-gray-100
+            italic
+            hover:bg-slate-300
+            dark:hover:bg-slate-500
+            sm:text-base
     }
 }
