--- a/templates/profile/index.html.twig
+++ b/templates/profile/index.html.twig
@@ -3,24 +3,181 @@
 {% block title %}Profile | {{ app.user.fullName }}{% endblock %}
 
 {% block body %}
-	<div class="max-w-7xl mx-auto px-4 py-10 sm:px-6 lg:px-8 dark:bg-slate-700">
-		<div class="overflow-y-auto max-h-96 md:max-h-screen shadow-inner rounded-lg p-4 not-prose">
-        <ul role="list" class="mt-3 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-3 sm:gap-4 ">
-            {% for recived in receives %}
-              <li class="w-full bg-slate-100 col-span-1 flex border-transparent shadow-lg rounded-md dark:bg-slate-600">
-                    <div class="flex-1 flex items-center justify-between rounded-lg truncate">
-                        <div class="flex-1 px-4 py-2 text-sm truncate prose">
-                            <p class="text-gray-900 font-medium dark:text-gray-300">{{ recived.issue.firstname ~ ' ' ~ recived.issue.lastname }}</p>
-                            <p class="text-gray-900 font-medium dark:text-gray-300">{{ recived.comment }}</p>
-	                        {% include 'includes/_start_rate.html.twig' with { idGrade:'rate_profil_star', scoreGrade:recived.grade, class:'profil_page', size_start:'star_profil' } %}
-                          <p class="text-sm text-gray-500/50 dark:text-white/25">envoyer le {{ recived.createdAt|date("d/m/Y", "Europe/Paris") }}</p>
-                        </div>
-                    </div>
-                </li>
-            {% endfor %}
-        </ul>
-    </div>
-</div>
+	<div class='border-b border-b-gray-300/50 px-4 py-10 dark:border-gray-800'>
+			<h1 class='text-gray-800 text-4xl font-extrabold sm:text-6xl dark:text-gray-200'>Dashboard</h1>
+	</div>
+	<div class="min-h-full flex">
+
+		<div id='open_sidebar' class="block hidden pt-1 px-1 bg-gray-100 dark:bg-slate-600">
+			<button type="button" class="ml-1 flex items-center justify-center h-10 w-10 rounded-full hover:outline-none hover:ring-2 hover:ring-inset hover:ring-gray-700 dark:hover:ring-gray-300">
+				<span class="sr-only">Open sidebar</span>
+				<!-- Heroicon name: outline/x -->
+				<svg class="h-6 w-6 text-gray-700 dark:text-gray-100" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+				  <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25H12" />
+				</svg>
+			</button>
+		</div>
+
+		<div id='sideBar' class="relative flex-1 flex flex-col max-w-[38%] w-[38%] sm:max-w-[20%] sm:w-[20%] bg-gray-100 dark:bg-slate-600 dark:text-gray-100 transition duration-200 ease-in-out">
+
+			<div class="absolute top-0 right-0 -mr-12 pt-1">
+				<button id='close_sidebar' type="button" class="ml-1 flex items-center justify-center h-10 w-10 rounded-full lg:hidden hover:outline-none hover:ring-2 hover:ring-inset hover:ring-gray-700 dark:hover:ring-gray-300">
+					<span class="sr-only">Close sidebar</span>
+					<!-- Heroicon name: outline/x -->
+					<svg class="h-6 w-6 text-gray-700 dark:text-gray-100" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+					</svg>
+				</button>
+			</div>
+
+			<div id='sidebar_menu' class="flex flex-col flex-grow border-r border-gray-200 pt-5 pb-4 overflow-y-auto dark:border-gray-800">
+				<div class="mt-5 flex-grow flex flex-col space-y-8">
+					<a role='button' id='button_recap' class='text-md font-semibold px-3 py-3 mx-2 flex items-center sm:text-xl hover:bg-slate-300 focus:bg-slate-500 dark:hover:bg-slate-700 rounded-md'>
+						<span class='flex-auto'>Recape</span>
+					</a>
+					<div>
+						<a id='dropdown_button_sidebar_feedSend' role='button' class='text-md font-semibold px-3 py-2 mx-2 flex items-center sm:text-xl hover:bg-slate-300 dark:hover:bg-slate-700 rounded-md'>
+							<span class='flex-auto'>Feedback envoyer</span>
+							<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="text-gray-400 mr-1 flex-shrink-0 h-6 w-6 sm:mr-3 dark:text-gray-100">
+								<path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
+							</svg>
+						</a>
+						<div class='feedSendList flex flex-col hidden transition duration-200 ease-in-out'>
+							<a role='button' id='all_send_click' class='btn-list-sidebar-profile'>Tous</a>
+							<a role='button' id='send_15d_click' class='btn-list-sidebar-profile'>Ces 15 derniers jours</a>
+							<a role='button' id='send_30d_click' class='btn-list-sidebar-profile'>Ces 30 derniers jours</a>
+						</div>
+					</div>
+					<div>
+						<a id='dropdown_button_sidebar_feedReceived' role='button' class='text-md font-semibold px-3 py-3 mx-2 flex items-center sm:text-xl hover:bg-slate-300 dark:hover:bg-slate-700 rounded-md'>
+							<span class='flex-auto'>Feedback reçu</span>
+							<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="text-gray-400 mr-1 flex-shrink-0 h-6 w-6 sm:mr-3 dark:text-gray-100">
+								<path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
+							</svg>
+						</a>
+						<div class='feedReceivedList flex flex-col hidden transition duration-200 ease-in-out'>
+							<a role='button' id='all_receive_click' class='btn-list-sidebar-profile'>Tous</a>
+							<a role='button' id='receive_15d_click' class='btn-list-sidebar-profile'>Ces 15 derniers jours</a>
+							<a role='button' id='receive_30d_click' class='btn-list-sidebar-profile'>Ces 30 derniers jours</a>
+						</div>
+					</div>
+
+					<a role='button' href='{{ path('app_interactions') }}' class='text-md font-semibold px-3 py-3 mx-2 flex items-center sm:text-xl hover:bg-slate-300 dark:hover:bg-slate-700 rounded-md'>
+						<span class='flex-auto'>Quitter</span>
+						<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="text-gray-400 mr-3 flex-shrink-0 h-6 w-6 dark:text-gray-100">
+							<path stroke-linecap="round" stroke-linejoin="round" d="M15.75 9V5.25A2.25 2.25 0 0013.5 3h-6a2.25 2.25 0 00-2.25 2.25v13.5A2.25 2.25 0 007.5 21h6a2.25 2.25 0 002.25-2.25V15m3 0l3-3m0 0l-3-3m3 3H9" />
+						</svg>
+					</a>
+
+				</div>
+			</div>
+		</div>
+
+		<div class="px-10 py-10 lg:py-12 lg:px-5 flex flex-col w-0 flex-1">
+
+			<div id='block_recap' class='bg-gray-200'>
+				<p>Block Recap</p>
+			</div>
+
+			<div id='block_feedSend' class='my-3'>
+				<div id='all_feedSend' class='px-2 py-3 my-4 rounded-md hidden'>
+					<div class='w-full'>
+						<h2 class='text-2xl text-gray-900 font-extrabold tracking-tight sm:text-3xl dark:text-gray-300'>Tous vos feedbacks envoyés</h2>
+						<div class='py-10'>
+							<ul role="list" class="mt-3 grid grid-cols-1 sm:grid-cols-3 gap-3 sm:gap-4 ">
+							{% if allIssues|length >= 1 %}
+								{% for allIssue in allIssues %}
+									{% include 'includes/_card_content_profile.html.twig' with { feedback: allIssue, fullname: allIssue.received.fullname } %}
+								{% endfor %}
+							{% else %}
+								<p class="text-gray-900 font-medium dark:text-gray-300">Désolé, mais depuis le début de l'XP, vous n'avez envoyé aucun feedback</p>
+								<a href='{{ path('app_interactions') }}' class='btn-profile font-extrabold'>Démarrer</a>
+							{% endif %}
+							</ul>
+						</div>
+					</div>
+				</div>
+
+				<div id='days_send_15' class='hidden px-2 py-3 my-4 rounded-md'>
+					<div class='w-full'>
+						<h2 class='text-2xl text-gray-900 font-extrabold tracking-tight sm:text-3xl dark:text-gray-300'>Vos feedbacks envoyés, ces 15 derniers jours</h2>
+						<div class='py-10'>
+							<ul role="list" class="mt-3 grid grid-cols-1 sm:grid-cols-2 gap-3 sm:gap-4 ">
+							{% if issuesBetweenDate15|length >= 1 %}
+								{% for issueBetweenDate in issuesBetweenDate15 %}
+									{% include 'includes/_card_content_profile.html.twig' with { feedback: issueBetweenDate, fullname: issueBetweenDate.received.fullname } %}
+								{% endfor %}
+							{% else %}
+								<p class="text-gray-900 font-medium dark:text-gray-300">Désolé, mais durant ces 15 derniers jours, vous n'avez envoyé aucun feedback</p>
+								<a href='{{ path('app_interactions') }}' class='btn-profile font-extrabold'>Démarrer</a>
+							{% endif %}
+							</ul>
+						</div>
+					</div>
+				</div>
+
+				<div id='days_send_30' class='hidden px-2 py-3 my-4 rounded-md'>
+					<div class='w-full'>
+						<h2 class='text-2xl text-gray-900 font-extrabold tracking-tight sm:text-3xl dark:text-gray-300'>Vos feedbacks envoyés, ces 30 derniers jours</h2>
+						<div class='py-10'>
+							<ul role="list" class="mt-3 grid grid-cols-1 sm:grid-cols-2 gap-3 sm:gap-4 ">
+								{% if issuesBetweenDate30|length >= 1 %}
+									{% for issueBetweenDate30 in issuesBetweenDate30 %}
+										{% include 'includes/_card_content_profile.html.twig' with { feedback: issueBetweenDate30, fullname: issueBetweenDate30.received.fullname } %}
+									{% endfor %}
+								{% else %}
+									<p class="text-gray-900 font-medium dark:text-gray-300">Désolé, mais durant ces 30 derniers jours, vous n'avez envoyé aucun feedback, ça commence à faire long là...</p>
+									<a href='{{ path('app_interactions') }}' class='btn-red font-extrabold'>Démarrer</a>
+								{% endif %}
+							</ul>
+						</div>
+					</div>
+				</div>
+
+			</div>
+
+			<div id='block_feedReceived' class=''>
+				<div id='all_feedReceived' class='hidden px-2 py-3 my-4 rounded-md'>
+					<div class='w-full'>
+						<h2 class='text-2xl text-gray-900 font-extrabold tracking-tight sm:text-3xl dark:text-gray-300'>Tous vos feedbacks reçus</h2>
+						<div class='py-10'>
+							<ul role="list" class="mt-3 grid grid-cols-1 sm:grid-cols-3 gap-3 sm:gap-4 ">
+							{% if allReceives|length >= 1 %}
+								{% for allReceive in allReceives %}
+									{% include 'includes/_card_content_profile.html.twig' with { feedback: allReceive, fullname: allReceive.issue.fullname } %}
+								{% endfor %}
+							{% else %}
+								<p class="text-gray-900 font-medium dark:text-gray-300">Désolé, mais depuis le début de l'XP, vous n'avez reçu aucun feedback fait le savoir autour de vous</p>
+							{% endif %}
+							</ul>
+						</div>
+					</div>
+				</div>
+				<div id='days_received_15' class='hidden px-2 py-3 my-4 rounded-md'>
+					<h2 class='text-2xl text-gray-900 font-extrabold tracking-tight sm:text-3xl dark:text-gray-300'>Vos feedbacks reçus, ces 15 derniers jours</h2>
+					<div class='w-full'>
+						<div class='py-10'>
+							<ul role="list" class="mt-3 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-3 sm:gap-4 ">
+								{% for receivedBetweenDate15 in receivedsBetweenDate15 %}
+									{% include 'includes/_card_content_profile.html.twig' with { feedback: receivedBetweenDate15, fullname: receivedBetweenDate15.issue.fullname } %}
+								{% endfor %}
+							</ul>
+						</div>
+					</div>
+				</div>
+				<div id='days_received_30' class='hidden px-2 py-3 my-4 rounded-md'>
+					<h2 class='text-2xl text-gray-900 font-extrabold tracking-tight sm:text-3xl dark:text-gray-300'>Vos feedbacks reçus, ces 30 derniers jours</h2>
+					<div class='py-10'>
+					<ul role="list" class="mt-3 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-3 sm:gap-4 ">
+						{% for receivedBetweenDate30 in receivedsBetweenDate30 %}
+							{% include 'includes/_card_content_profile.html.twig' with { feedback: receivedBetweenDate30, fullname: receivedBetweenDate30.issue.fullname } %}
+						{% endfor %}
+					</ul>
+				</div>
+				</div>
+			</div>
+		</div>
+	</div>
 {% endblock %}
 {% block javascripts %}
 	{{ parent() }}
